# rustbr

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: index.html
migrations/20160602235827_first_tables/: up.sql
src/: main.rs
src/libraries/: assets.rs  db.rs  jwt.rs  mod.rs
src/models/: mod.rs  user.rs
src/resources/: assets.rs  mod.rs  sessions.rs  user.rs
src/schemas/: mod.rs  token.rs
